--- a/practice/index.html
+++ b/practice/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p id = "info-text"></p>
-    <script type = "text/javascript" src = "script.js">
+    <script type = "text/javascript" src = "javascript.js">
 
     </script>
 
